# src/bd/types.ts
@@ -1,17 +1,15 @@
 export type Blog = {
-  id: string;
   name: string;
   description: string;
   websiteUrl: string;
+  createdAt: Date;
+  isMembership: boolean;
 };
 
 export type Post = {
-  id: string;
   title: string;
   shortDescription: string;
   content: string;
   blogId: string;
   blogName: string;
 };
-
-export type Db = { blogs: Blog[]; posts: Post[] };
