# src/modules/blog/types.ts
@@ -1,5 +1,14 @@
-export type BlogDTO = {
+export type BlogInputDTO = {
   name: string;
   description: string;
   websiteUrl: string;
+};
+
+export type BlogOutputDTO = {
+  id: string;
+  name: string;
+  description: string;
+  websiteUrl: string;
+  createdAt: string;
+  isMembership: boolean;
 };
